tests/__snapshots__/validation-ts-expect-error-argument-is-missing-stderr.snap.txt
Error: Directive requires an argument.

Add a fragment of the expected error message after the directive.
To ignore the directive, append the '!' character after it.

  1 | // @ts-expect-error
    | ~~~~~~~~~~~~~~~~~~~
  2 | const x: string = 0;
  3 | 

      at ./__typetests__/sample.tst.ts:1:1

    The suppressed error:

    Type 'number' is not assignable to type 'string'. ts(2322)

      1 | // @ts-expect-error
      2 | const x: string = 0;
        |       ~
      3 | 

          at ./__typetests__/sample.tst.ts:2:7

